corrects alignment issues and nav bar styling

--- a/final-project/css/styles.css
+++ b/final-project/css/styles.css
@@ -1,5 +1,6 @@
 html{
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 }
 
 *,
@@ -97,8 +98,6 @@ a:hover, a:active {
     text-decoration: underline;
 }
 
-
-
 /* Adds image through css and sizing the img to cover the entire container */
 .welcome {
     width: 100%;
@@ -115,7 +114,6 @@ a:hover, a:active {
     position: relative;
     top: 40px;
 }
-
 
 .welcome h1 {
     color: #ffffff;
@@ -164,8 +162,6 @@ a:hover, a:active {
     width: 100%;
     height: auto;
     padding-bottom: 30px;
-    /* background-size: cover;
-    background-image: url("/images/about-us.jpg"); */
 }
 
 .img-about {
@@ -221,7 +217,7 @@ a:hover, a:active {
 }
 
 .learn-more-button {
-    background-color: #222222;
+    background-color: rgba(0, 0, 0, 0.6);
     border: 1px solid #C78B07;
     color: #ffffff;
     padding: 25px;
@@ -265,7 +261,7 @@ input[type=text], select {
     margin-bottom: 12px;
 }
 
-/* adds styles to message box text type area */
+/* adds styles to message box text type area and contact button*/
 textarea {
     width: 100%;
     height: 100px;
@@ -289,7 +285,6 @@ table {
     width: 100%;
     margin-top: 10px;
 }
-
 
 /* Adding styles to the table heading. both headings aligned to center with a bg color and a border */
 table th {
@@ -370,6 +365,7 @@ footer a {
         padding: 10px;
     }
 
+    /* styling the top navigation. positioning the logo li a items.   */
     header {
         background-color: #222;
         padding: 15px 30px;
@@ -384,7 +380,8 @@ footer a {
     }
 
     .topnav img {
-        margin-left: 70px;
+        margin-left: 80px;
+        margin-right: 120px;
     }
 
     ul li {
@@ -397,14 +394,17 @@ footer a {
         display: inline-block;
         margin-left: 0px;
         letter-spacing: 1px;
-        padding: 15px 15px 15px 15px;
+        padding: 20px;
         line-height: 0px;
+        padding-left: 50px;
     }
 
     .navigation {
         margin-top: 20px;
+        margin-left: 50px;
     }
 
+     /* styling the search box in the nav bar. adding inline block to display items horizontally */
     .search-container {
         display: inline-block;
         height: 35px;
@@ -428,20 +428,23 @@ footer a {
         margin-top: 0px;
         height: 100%;
         cursor: pointer;
-        margin-right: 70px;
+        margin-right: 80px;
     }
 
     .active {
-        color: #c68d00;
-        margin-right: 100px;
+        color: #222;
+        background-color: #c78c06;
+        padding: 20px;
     }
 
     li:nth-child(1)  {
-        background-color: inherit;
         line-height: 0px;
         width: 85px;
-        letter-spacing: 1px;
-        margin-left: 25px;
+        letter-spacing: 1px;   
+    }
+
+    li:nth-child(2)  {
+        padding-left: 30px;
     }
 
     /* styling the header and content inside it. giving it a overlay of black color and an opacity so we can see through the box and adjusting the paragraph line spacing */
@@ -449,11 +452,14 @@ footer a {
         background-color: rgba(0, 0, 0, 0.6);
         height: 450px;
         /* padding: 50px 30px 50px 30px; */
-        margin: 20px 40px 20px 40px;
-        padding: 50px 10px 50px 10px;
+        margin: 0px 90px 0px 90px;
+        padding: 40px 10px 50px 10px;
         position: relative;
+        overflow: hidden;
     }
-    
+    .welcome {
+        margin-left: 0px;
+    }
     .welcome p {
         line-height: 30px;
     }
@@ -644,6 +650,5 @@ footer a {
     .contact h3 {
         margin-bottom: 20px;
     }
-
-
+    
     }
